--- a/El_Merendero/nbproject/project.properties
+++ b/El_Merendero/nbproject/project.properties
@@ -52,7 +52,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=el_merendero.OrdineDiClasse
+main.class=el_merendero.Merendemain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
